all endpoints is fixed and working
